src/main/default/objects/OutOfOfficeRequest_OOOR__c/OutOfOfficeRequest_OOOR__c.object-meta.xml
<CustomObject>
    <description
  >This object is going to be used to log out of the office records for users. These records are going to be read by an Apex class, which will then re-assign records based on the custom metadata settings defined in OutOfTheOfficeSettings__mdt.
Demen S. 27th Oct 2020.</description>
    <label>Out of Office Request</label>
    <nameField>
        <displayFormat>OOOR-{0000}</displayFormat>
        <label>Out of Office Reuest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Office Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>