src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/BackupUser_OOOR__c.field-meta.xml
<CustomField>
    <fullName>BackupUser_OOOR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Records ob defined Objects in OutOfTheOfficeSettingsOOOR__mdt are going to be re-assigned to this user.
Demen S. 27th Oct 2020.</description>
    <label>Backup User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BackupUser_OutOfOfficeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>