src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/Comment_OOOR__c.field-meta.xml
<CustomField>
    <fullName>Comment_OOOR__c</fullName>
    <description>Provides users the ability to provide a short comment.
Demen S. 27th Oct 2020.</description>
    <inlineHelpText
  >Please provide any valuable comment you want to share</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>