src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/EndDate_OOOR__c.field-meta.xml
<CustomField>
    <fullName>EndDate_OOOR__c</fullName>
    <description
  >This is the ed date of the OOO. Based on this date, records are going to be stopped to be re-assigned.
Demen S. 27th Oct 2020.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>