src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/PersonTakingTimeOff_OOOR__c.field-meta.xml
<CustomField>
    <fullName>PersonTakingTimeOff_OOOR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Records ob defined Objects in OutOfTheOfficeSettingsOOOR__mdt are going to be re-assigned from this owner.
Demen S. 27th Oct 2020.</description>
    <label>Person taking Time Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PersonTakingTimeOff_OutOfOfficeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>