src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/StartDate_OOOR__c.field-meta.xml
<CustomField>
    <fullName>StartDate_OOOR__c</fullName>
    <description
  >This is the start date of the OOO. Based on this date, records are going to be re-assigned.
Demen S. 27th Oct 2020.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>