src/main/default/objects/OutOfOfficeRequest_OOOR__c/fields/Status_OOOR__c.field-meta.xml
<CustomField>
    <fullName>Status_OOOR__c</fullName>
    <defaultValue>&quot;Approved&quot;</defaultValue>
    <description
  >This field is going to be update by the approval process Backup_Approval. Only Approved out of office records are going to be considered by the APEX class oooh_OutOfTheOfficeBatchable.
Demen S. 19th 2020.</description>
    <inlineHelpText
  >This status field is going to be updated automatically by the outcome of the approval.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>