src/main/default/objects/OutOfOfficeRequest_OOOR__c/validationRules/BackupCantBeOOOPerson_OOOR.validationRule-meta.xml
<ValidationRule>
    <fullName>BackupCantBeOOOPerson_OOOR</fullName>
    <active>true</active>
    <description
  >To make sure that the OOO requestor doesn&apos;t equal the backup person.</description>
    <errorConditionFormula
  >PersonTakingTimeOff_OOOR__c = BackupUser_OOOR__c</errorConditionFormula>
    <errorDisplayField>BackupUser_OOOR__c</errorDisplayField>
    <errorMessage
  >The backup person can&apos;t be the the person taking time off</errorMessage>
</ValidationRule>