src/main/default/objects/OutOfOfficeRequest_OOOR__c/validationRules/CanCreateBehalfOfOthers_OOOR.validationRule-meta.xml
<ValidationRule>
    <fullName>CanCreateBehalfOfOthers_OOOR</fullName>
    <active>true</active>
    <description
  >This validation rule only lets users with the CanCreateOOO custom permission create out of office requests on behalf of others.
Demen S. 25th June 2021</description>
    <errorConditionFormula
  >$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
  $Permission.CanCreateOOO_recordOnBehalfOfOthers_OOOR = False &amp;&amp;
    OwnerId &lt;&gt; PersonTakingTimeOff_OOOR__c</errorConditionFormula>
    <errorMessage
  >You don&apos;t have the permissions to create a time off record on behalf of others</errorMessage>
</ValidationRule>