src/main/default/objects/OutOfOfficeRequest_OOOR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PersonTakingTimeOff_OOOR__c</columns>
    <columns>BackupUser_OOOR__c</columns>
    <columns>StartDate_OOOR__c</columns>
    <columns>EndDate_OOOR__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status_OOOR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>